[package]
name = "structured"
version = "0.4.0"
description = "Data structures to handle large, structured data."
homepage = "https://github.com/petabi/structured"
repository = "https://github.com/petabi/structured"
license = "Apache-2.0"
authors = [
    "Min Kim <msk@dolbo.net>",
    "Min Shao <min.shao1988@gmail.com>",
    "Sehkone Kim <sehkone@petabi.com>",
]
edition = "2018"
exclude = ["./github"]

[badges]
codecov = { repository = "petabi/structured", service = "github" }

[dependencies]
arrow = "4"
chrono = { version = "^0.4.9", features = ["serde"] }
csv-core = "0.1"
dashmap = "4"
itertools = "0.10"
num-traits = "0.2"
statistical = "1"
strum = "0.20"
strum_macros = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "^1.0.13", features = ["preserve_order"] }
thiserror = "1"
