[package]
name = "structured"
version = "0.13.0"
authors = [
  "Min Kim <msk@dolbo.net>",
  "Min Shao <min.shao1988@gmail.com>",
  "Sehkone Kim <sehkone@petabi.com>",
]
edition = "2021"
rust-version = "1.62"
description = "Data structures to handle large, structured data."
homepage = "https://github.com/petabi/structured"
repository = "https://github.com/petabi/structured"
license = "Apache-2.0"
exclude = ["./github"]

[badges]
codecov = { repository = "petabi/structured", service = "github" }

[dependencies]
arrow = "40"
chrono = { version = "^0.4.9", default-features = false, features = ["serde"] }
csv-core = "0.1"
itertools = "0.10"
num-traits = "0.2"
ordered-float = { version = "3.4.0", default-features = false }
percent-encoding = "2.1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "^1.0.13", features = ["preserve_order"] }
statistical = "1"
strum = "0.24"
strum_macros = "0.24"
thiserror = "1"

[dev-dependencies]
ahash = "0.8"
serde_test = "1.0"
